# sloth

./: .gitignore  BADGES.md  MANIFEST.in  README.md  benchmark.py  demo.py  dev.py  example.py  mmcif_tools.py  pyproject.toml  requirements.txt  setup.py  test_mmcif_tools.py  xml_mapping_generator.py
.github/workflows/: publish.yml
sloth/: __init__.py  common.py  defaults.py  demo.py  exporter.py  handler.py  importer.py  importers.py  loaders.py  main.py  models.py  parser.py  pdbml_converter.py  pdbml_enums.py  plugins.py  schemas.py  serializers.py  validator.py  validators.py  wrappers.py  writer.py
sloth/legacy/: __init__.py  importers.py  parser.py  serializers.py  writer.py
sloth/mmcif/: __init__.py  common.py  defaults.py  exporter.py  handler.py  importer.py  parser.py  serializer.py  validator.py  writer.py
sloth/mmcif/schemas/: mmcif_json_flat_schema.json  mmcif_json_nested_schema.json  mmcif_xml_flat_schema.xsd  mmcif_xml_nested_schema.xsd
sloth/schemas/: comprehensive_xml_mapping_rules.json  mmcif_json_schema.json  mmcif_xml_schema.xsd
tests/: test_imports.py  test_main.py  test_parameter_refactoring.py  test_pdbml_conversion.py  test_permissive_mode.py  test_pipeline_integration.py  test_relationship_resolution.py  test_schemas.py  test_utils.py
